# mamboMarket

./: .gitignore  .travis.yml  ChangeLog  ClassDiagram1.cd  Makefile.am  Makefile.am~  README.md  afqfpchedjqclfrdnycm  ax_boost_asio.m4  bocaffgwzzexsnvktdvv.temp  bsamxlxipcbbwcbmiosn.temp  configure  configure.ac  csv.cpp  csv.h  efnfifqaasuelsevxkxx.temp  fmrqlskfwuztbgjlztrv.temp  gyfpkzvormcmojtsxiat.temp  ijuijdguxwfwaczghfml.temp  iroaxdwfjpnnxkiafvmr.temp  klcwbrngzxugfqdosmbu.temp  knyzicfzawqkwvgtfgwx.temp  lhdrnycyfzxqwrudvpfa.temp  mambo-MSVC2017.sln  mambo-MSVC2017.vcxproj  mambo-MSVC2017.vcxproj.filters  nkhbqzuynftacrxzgkxl.temp  npclnrwwtsrijhupftis.temp  prztvauzveytjfutovhy.temp  qgcxnfjphetkbzvwfqde  quotes.cpp  quotes.h  stock.cpp  stock.h  stocks.cpp  stocks.h  suiuemomwuzjzqgzxpvr  vyildzxunihhcikxdlzu.temp  wqpqnfnlvhfauugesape.temp  xpmstoypgpadrvcqczdq.temp
data/AAPL/: daily.csv
doc/: aapl-20161231.xml  browse-edgar  getcompany.xml
include/: quotes.h  stock.h  stock_detail.h
m4/: ChangeLog  EMPTY  ax_boost_date_time.m4  ax_boost_thread.m4  ax_check_library.m4  ax_check_pgsql_db.m4  ax_lib_postgresql.m4  ax_pthread.m4
po/: ChangeLog
src/: MAMBO.SQL  Makefile.am  StockDetail.cpp  StockDetail.h  csv.cpp  csv_report.cpp  error.hpp  functions.h  getCIK.cpp  loadASIO.cpp  main.cpp  options.hpp  quotes.cpp  report.cpp  report.hpp  reports.cpp  reports.hpp  save.cpp  sec.cpp  sec.h  sec_archives.cpp  stock.cpp  stock.h  stock.hpp  weekDayIterator.hpp  xml_report.cpp
src/TA/: ema.h  functions.cpp  functions.h  macd.h  max.h  min.h  momentum.h  roc.h  slope.h  sma.h  subtract.h
src/csv/: csv_report.cpp  csv_report.hpp
src/date/: date.cc  date.h
src/pugixml/: pugixml.cpp
src/sec/: 10Q.cpp  10Q.hpp  sec.cpp  sec_archives.cpp  sec_report.hpp
src/stlta/: stlta.cpp  stlta.hpp
src/xbrl/: client_http.hpp  main.cpp  reports.cpp  sec.hpp  url.hpp
src/xml/: xml_report.cpp  xml_report.hpp
test/: sec_test.cpp
